# hw_operator

./: .build_project  .project  CMakeLists.txt
cmake/: config.cmake
framework/: CMakeLists.txt
framework/onnx_plugin/: CMakeLists.txt  abs_npu_plugin.cpp  ge_onnx.pb.h  leaky_relu_npu_plugin.cpp  thresholded_relu_npu_plugin.cpp
op_proto/: CMakeLists.txt  abs_npu.cpp  abs_npu.h  leaky_relu_npu.cpp  leaky_relu_npu.h  thresholded_relu_npu.cpp  thresholded_relu_npu.h
profiling/simulator/ca/leakey_relu_npu/test_leaky_relu_npu_precision/: testname_parallelism.json
tbe/: CMakeLists.txt
tbe/impl/: thresholded_relu_npu.py
tbe/op_info_cfg/ai_core/ascend310/: abs_npu.ini  leaky_relu_npu.ini
tbe/op_info_cfg/ai_core/ascend610/: leaky_relu_npu.ini  thresholded_relu_npu.ini
testcases/: CMakeLists.txt
testcases/bbit/abs_npu/: compare_result.py  test_abs_npu.py
testcases/bbit/abs_npu/model/: abs_npu_1_16_128_128.om  abs_npu_1_16_128_128.onnx
testcases/bbit/leakyrelu_npu/: compare_result.py  hiai_infer_florence
testcases/bbit/leakyrelu_npu/model/: ge_check_op.json  leakyrelu_1_16_128_128.om  leakyrelu_1_16_128_128.onnx
testcases/bbit/thresholdedrelu_npu/: check_result.json  ge_check_op.json  test.py  test_leakyrelu_npu.py
testcases/bbit/thresholdedrelu_npu/csv_files/: designed_alpha_fp16_1_10.csv  designed_alpha_fp16_test.csv  designed_alpha_fp32_test.csv  designed_range_fp16_1_10.csv  designed_range_fp16_1_12.csv  designed_range_fp16_1_18.csv  designed_range_fp16_1_19.csv  designed_range_fp16_65535_1_10.csv  designed_range_fp16_test.csv  designed_range_fp32_1_13.csv  designed_range_fp32_1_2.csv  designed_range_fp32_test.csv  designed_shape_fp16_1_12.csv  designed_shape_fp16_65535_1_10.csv  generated_alpha_fp16_1_12.csv  generated_alpha_fp16_1_18.csv  generated_alpha_fp16_1_19.csv  generated_alpha_fp16_linear_1_12.csv  generated_alpha_fp32_1_13.csv  generated_alpha_fp32_1_2.csv  generated_shape_fp16_1_10.csv  generated_shape_fp16_1_18.csv  generated_shape_fp16_1_19.csv  generated_shape_fp32_1_13.csv  generated_shape_fp32_1_2.csv
testcases/bbit/thresholdedrelu_npu/model/: Thresholded_relu_npu_fp16_001.onnx  Thresholded_relu_npu_fp16_002.onnx  Thresholded_relu_npu_fp16_003.onnx  Thresholded_relu_npu_fp16_004.onnx  Thresholded_relu_npu_fp16_005.onnx  Thresholded_relu_npu_fp16_006.onnx  Thresholded_relu_npu_fp16_007.onnx  Thresholded_relu_npu_fp16_008.onnx  Thresholded_relu_npu_fp16_009.onnx  Thresholded_relu_npu_fp16_010.onnx
testcases/bbit/thresholdedrelu_npu/scripts/: 1_atc_convert_model.sh  2_exe_hiai.sh  3_rename_ascend_out.sh  atc_convert_model.sh  compare_result.py  convert_model_fp16.sh  convert_model_fp32.sh  copy_csv.sh  gen_offline_model_fp16.sh  gen_offline_model_fp32.sh  my_utils.py  rename_out_fp16.sh  rename_out_fp32.sh  ss.sh  test.py  test_thresholded_relu_npu.py
testcases/ut/ops_test/: CMakeLists.txt  test_main.cpp
testcases/ut/ops_test/abs_npu/: CMakeLists.txt  test_abs_npu_impl.py  test_abs_npu_proto.cpp
testcases/ut/ops_test/leaky_relu_npu/: CMakeLists.txt  test_leaky_relu_npu_impl.py  test_leaky_relu_npu_proto.cpp
testcases/ut/ops_test/thresholded_relu_npu/: CMakeLists.txt  test_thresholded_relu_npu_impl.py  test_thresholded_relu_npu_proto.cpp
